<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.myLists.MyListsFragment">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextColor="?android:textColor"
        app:tabSelectedTextColor="?colorPrimary"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/TabLayoutText"
>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All_list"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="3dp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Watching_list"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="3dp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Completed_list"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="-10dp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/On_Hold_list"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="-10dp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dropped_list"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="-10dp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_to_Watch_list"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="-10dp" />

    </com.google.android.material.tabs.TabLayout>

<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--        android:id="@+id/swipeRefreshLayoutLists"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tabLayout">-->


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:verticalScrollbarPosition="left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->



</androidx.constraintlayout.widget.ConstraintLayout>